Mudança de nome

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Aparecida</title>
 </head>
 <body>
-    <h1>Aparecida</h1>
+    <h1>Aparecida de Freitas Rodrigues</h1>
 </body>
 </html>
