iniciando minha página

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Aparecida de Freitas Rodrigues</h1>
     <h2> Bem-vindo </h2>
+    <h3>Começando minha página</h3>
 </body>
 </html>
